Stylesheet/emote/tag updates 2014-04-14

--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -3,8 +3,12 @@
 
 .side {
     padding-top: 100px;
-    background: url(%%tart%%) no-repeat 0 5px;
+    background: url(%%goddamnlochnessmonster%%) no-repeat 0 5px;
 }
+
+/*HAPPY BIRTHDAY ROSEBUD! 
+
+                          -Apple*/
 
 /*End of [REDACTED]*/
 
@@ -15,7 +19,7 @@
 /*No problem*/
 
 /* HEADER */
-#header { background: url(%%up%%); }
+#header { background: url(%%25schmeckles%%); }
 
 /* BACKGROUND */
 body { background: url(%%4waffleLite%%)
