--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,6 +1,6 @@
 /* 
             @
-            @@u
+            @@uF
           J@. @
          @@   @u           i21PMMOG8ui
         @S    YM      r0GZ2vi.      .:7JSN:
@@ -150,7 +150,7 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:10px 10px -3px 10px;
+ margin:30px 10px 0px 10px;
 }
 
 /*
@@ -161,7 +161,7 @@ border-top-right-radius: 5px;
 }
 */
 
-#header-bottom-left{padding-top:10px}
+#header-bottom-left{padding-top:28px}
 .pagename {font-size:12pt}
 .titlebox form{position: static}
 .titlebox .usertext-body .md ol
@@ -232,11 +232,9 @@ border-top-right-radius: 5px;
 .sidecontentbox a.author.id-t2_3fvpf:before {content:"The Velour Frog"}
 .sidecontentbox a.author.id-t2_6uo3t:before {content:"spokesthephony"}
 .sidecontentbox a.author.id-t2_5dxi7:before {content:"ThreeLinker"}
-.sidecontentbox ul.content li.more a:before {content:"Lanky Kong"}
+.sidecontentbox ul.content li.more {display:none}
 .sidecontentbox a.author.id-t2_5fmql {display:none;}
 .sidecontentbox a.author.id-t2_6ua87 {display:none;}
-
-.sidecontentbox ul.content li.more {margin:0;text-align:left;}
 
 a.author.id-t2_4mwnz,a.author.id-t2_8kzeb,a.author.id-t2_52j0w,div.content a.author.id-t2_5agom,a.author.id-t2_5o2lh,a.author.id-t2_4uott,a.author.id-t2_dq6ce{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
 a.author.id-t2_4mwnz:after,a.author.id-t2_8kzeb:after,a.author.id-t2_52j0w:after,div.content a.author.id-t2_5agom:after,a.author.id-t2_5o2lh:after,a.author.id-t2_4uott:after,a.author.id-t2_dq6ce:after{font-size:10px!important;display:block;letter-spacing:normal}
