--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -568,6 +568,12 @@ a[href|="/sunsetshrug"],a[href|="/ssshrug"]
 a[href|="/rsunsetshrug"],a[href|="/rssshrug"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes-flipped%%)!important; background-position: 0 -400%;}
 
+a[href|="/sunsetfacehoof"],a[href|="/ssfacehoof"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes%%)!important; background-position: -100% -400%;}
+
+a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"]
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnyamotes-flipped%%)!important; background-position: -100% -400%;}
+
 a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%sunnybmotes%%)!important}
 
