--- a/source-css/thebestpony.css
+++ b/source-css/thebestpony.css
@@ -2383,6 +2383,17 @@ a[href|="/sexyils"] {
 a[href|="/sexyils"] {
     background-position: -573px -140px
     }
+a[href|="/nou"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 85px;
+    background-image: url(%%secretemotes%%)
+    }
+a[href|="/nou"] {
+    background-position: -573px -264px
+    }
 a[href|="/emyscoot"] {
     display: block;
     clear: none;
